// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userRolesRepository read operations getProjectUsers returns expected snapshot 1`] = `
Array [
  Object {
    "instanceAdmin": false,
    "projectRoles": Array [
      Object {
        "projectKey": "project 1",
        "role": "admin",
      },
      Object {
        "projectKey": "project 2",
        "role": "user",
      },
    ],
    "toObject": [Function],
    "userId": "uid1",
    "userName": "user1",
  },
  Object {
    "instanceAdmin": true,
    "projectRoles": Array [
      Object {
        "projectKey": "project 2",
        "role": "viewer",
      },
    ],
    "toObject": [Function],
    "userId": "uid2",
    "userName": "user2",
  },
]
`;

exports[`userRolesRepository read operations getRoles returns expected snapshot 1`] = `
Object {
  "instanceAdmin": false,
  "projectRoles": Array [
    Object {
      "projectKey": "project 1",
      "role": "admin",
    },
    Object {
      "projectKey": "project 2",
      "role": "user",
    },
  ],
  "userId": "uid1",
  "userName": "user1",
}
`;
